# mock_softdevice

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
src/: main.rs  temp.rs
