[package]
name = "simple_ble"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-futures = { version = "0.1.2" }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-nrf = { version = "0.7.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"]}
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-embedded-hal = { version = "0.5.0" }
embedded-hal = { version = "1.0.0" }
embedded-io = "0.6"

defmt = { version = "1.0.1"}
defmt-rtt = "1.0.0"

usbd-hid = "0.8.1"
cortex-m = { version = "0.7.6",  default-features = false}
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0"}

rand = { version = "0.9.2", default-features = false }
static_cell = "2"
rand_core = { version = "0.9.3"}
rand_chacha = { version = "0.9.0", default-features = false }

nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", branch = "master", features = ["defmt", "ble-peripheral", "ble-central", "critical-section-impl", "s140", "nrf52840", "ble-gatt-server", "ble-sec"] }

heapless = { version = "0.8", default-features = false }
# nrf-softdevice = { version = "0.1.0", features = ["defmt", "ble-peripheral", "ble-central", "critical-section-impl", "s140", "nrf52840", "ble-gatt-server", "ble-sec"] }